# penzai

./: .gitignore  .pylintrc  .readthedocs.yaml  AUTHORS  README.md  pyproject.toml  readthedocs.yml  run_tests.py
.github/workflows/: unittests.yml
docs/: .gitignore  Makefile  _autogen_root.rst  conf.py  index.rst
docs/_include/: _glue_figures.ipynb
docs/_static/: custom.css  custom.js
docs/_templates/: pzclass.rst  pzdata.rst  pzmodule.rst  pzmodule_full.rst
docs/api/: penzai.deprecated.v1.rst  penzai.experimental.v2.rst  pz.de.rst  pz.nn.rst  pz.rst  pz.ts.rst  treescope.rst
docs/ext/: nb_output_cell_to_iframe.py  pz_alias_rewrite.py
docs/guides/: howto_reference.md  v2_differences.md
docs/scripts/: readthedocs_fetch_notebook_outputs.sh
notebooks/: Penzai_Demo_ICLR_2024.ipynb  data_effects.ipynb  gemma_from_scratch.ipynb  how_to_think_in_penzai.ipynb  induction_heads.ipynb  induction_heads_2B.ipynb  jitting_and_sharding.ipynb  lora_from_scratch.ipynb  named_axes.ipynb  selectors.ipynb  treescope_arrayviz.ipynb  treescope_prettyprinting.ipynb  v2_how_to_think_in_penzai.ipynb  v2_induction_heads.ipynb  v2_induction_heads_2B.ipynb  v2_jitting_and_sharding.ipynb  v2_lora_from_scratch.ipynb
penzai/: __init__.py
penzai/core/: __init__.py  context.py  dataclass_util.py  formatting_util.py  layer.py  named_axes.py  partitioning.py  random_stream.py  selectors.py  shapecheck.py  struct.py  syntactic_sugar.py  tree_util.py  variables.py
penzai/data_effects/: _treescope_handlers.py  effect_base.py  local_state.py  random.py  side_input.py  side_output.py
penzai/example_models/: simple_mlp.py
penzai/models/: simple_mlp.py
penzai/nn/: __init__.py  attention.py  basic_ops.py  combinators.py  dropout.py  embeddings.py  grouping.py  layer.py  layer_stack.py  linear_and_affine.py  parameters.py  standardization.py
penzai/pz/: __init__.py  de.py  nn.py  ts.py
penzai/toolshed/: annotate_shapes.py  auto_nmap.py  basic_training.py  check_layers_by_tracing.py  gradient_checkpointing.py  interleave_intermediates.py  isolate_submodel.py  jit_wrapper.py  lora.py  model_rewiring.py  patch_ipdb.py  save_intermediates.py  sharding_util.py  token_visualization.py  unflaxify.py
penzai/treescope/: __init__.py  _compatibility_setup.py  array_autovisualizer.py  arrayviz.py  autovisualize.py  canonical_aliases.py  (+20 more)
tests/: core_utils_test.py  misc_util_test.py  named_axes_test.py  partitioning_test.py  shapecheck_test.py  struct_pytree_dataclass_test.py  treescope_canonical_aliases_test.py  treescope_renderer_test.py  treescope_representation_test.py
(+239 files in other folders)
